--- a/GradesApi/GradesApi.csproj
+++ b/GradesApi/GradesApi.csproj
@@ -9,4 +9,8 @@
 	  <ProjectReference Include="..\GradesRepository\GradesRepository.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.6.0" />
+	</ItemGroup>
+
 </Project>
