--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+**/published
 
 # Created by https://www.gitignore.io/api/vim,linux,macos,rider,windows,dotnetcore,aspnetcore,visualstudio
 # Edit at https://www.gitignore.io/?templates=vim,linux,macos,rider,windows,dotnetcore,aspnetcore,visualstudio
